lab/lab6/y.output
Terminals unused in grammar

    NUM
    '*'


Grammar

    0 $accept: declist $end

    1 declist: decl declist
    2        | ε

    3 decl: type list ';'

    4 type: INT
    5     | FLOAT
    6     | CHAR

    7 list: list ',' ID
    8     | ID


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    ',' (44) 7
    ';' (59) 3
    error (256)
    CHAR (258) 6
    INT (259) 4
    FLOAT (260) 5
    ID (261) 7 8
    NUM (262)


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    declist (12)
        on left: 1 2
        on right: 0 1
    decl (13)
        on left: 3
        on right: 1
    type (14)
        on left: 4 5 6
        on right: 3
    list (15)
        on left: 7 8
        on right: 3 7


State 0

    0 $accept: • declist $end

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3

    $default  reduce using rule 2 (declist)

    declist  go to state 4
    decl     go to state 5
    type     go to state 6


State 1

    6 type: CHAR •

    $default  reduce using rule 6 (type)


State 2

    4 type: INT •

    $default  reduce using rule 4 (type)


State 3

    5 type: FLOAT •

    $default  reduce using rule 5 (type)


State 4

    0 $accept: declist • $end

    $end  shift, and go to state 7


State 5

    1 declist: decl • declist

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3

    $default  reduce using rule 2 (declist)

    declist  go to state 8
    decl     go to state 5
    type     go to state 6


State 6

    3 decl: type • list ';'

    ID  shift, and go to state 9

    list  go to state 10


State 7

    0 $accept: declist $end •

    $default  accept


State 8

    1 declist: decl declist •

    $default  reduce using rule 1 (declist)


State 9

    8 list: ID •

    $default  reduce using rule 8 (list)


State 10

    3 decl: type list • ';'
    7 list: list • ',' ID

    ';'  shift, and go to state 11
    ','  shift, and go to state 12


State 11

    3 decl: type list ';' •

    $default  reduce using rule 3 (decl)


State 12

    7 list: list ',' • ID

    ID  shift, and go to state 13


State 13

    7 list: list ',' ID •

    $default  reduce using rule 7 (list)
